--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.2.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.9",
+    "@mui/material": "^5.15.9",
+    "@mui/x-charts": "^6.19.4",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.5",
     "react": "^18",
@@ -25,7 +30,6 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.9.0",
-    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
