--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
     "@mui/x-charts": "^6.19.4",
+    "@mui/x-data-grid": "^6.19.5",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "^5.10.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -29,7 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prisma": "^5.9.0",
+    "prisma": "^5.10.2",
     "typescript": "^5"
   }
 }
