--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.0"
   },
   "devDependencies": {
     "@prisma/client": "^5.10.2",
